@@ -90,6 +90,37 @@ Audio = true
 # Image: Set to "true" if the renderer can display images.
 Image = true
 
+# LongFileNameFormat: Determines how media file names in the regular folders
+# are formatted. The formatting string may contain several tokens, which will
+# be replaced by their respective values. If a token cannot be meaningfully
+# replaced, it (and its optional surrounding braces) will not be displayed.
+#
+# The following tokens can be used:
+#
+#    %A       Audio language full name (e.g. "Japanese")
+#    %a       Audio language short name (e.g. "jp")
+#    %b       Audio flavor (e.g. "ac3 5.1 @ 640 kbps")
+#    %c       Audio codec (e.g. "AC3")
+#    %d       DVD track duration (e.g. "3:27:15")
+#    %E       Engine full name (e.g. "MEncoder")
+#    %e       Engine short name (e.g. "MEnc")
+#    %F       File name with extension (e.g. "Big_Buck_Bunny.mov")
+#    %f       File name without extension (e.g. "Bug_Buck_Bunny")
+#    %S       Subtitle language full name (e.g. "English")
+#    %s       Subtitle language short name (e.g. "en")
+#    %t       Subtitle type (e.g. "Timed text")
+#    %u       Subtitle flavor (e.g. "TX3G")
+#    %x       External subtitles ("External Subtitles")
+#
+# Default value is "%F - %d [%E] {%x} {Sub: %t/%S (%u)}".
+#LongFileNameFormat = %F - %d [%E] {%x} {Sub: %t/%S (%u)}
+
+# ShortFileNameFormat: Determines how media file names in the transcoding
+# virtual folder are formatted. See LongFileNameFormat for the tokens that
+# can be used.
+# Default value is "[%E] {Audio: %c/%A (%b)} {Sub: %t/%S (%u)}".
+#ShortFileNameFormat = [%E] {Audio: %c/%A (%b)} {Sub: %t/%S (%u)}
+
 #-----------------------------------------------------------------------------
 # DLNA SETTINGS
 #
