@@ -101,6 +101,11 @@ public class FFMpegAudio extends FFMpegVideo {
 	}
 
 	@Override
+	public String getShortName() {
+		return "FFA";
+	}
+
+	@Override
 	public int type() {
 		return Format.AUDIO;
 	}
