@@ -55,6 +55,11 @@ public class FFMpegAviSynthVideo extends FFMpegVideo {
 	}
 
 	@Override
+	public String getShortName() {
+		return "AVS/FF";
+	}
+
+	@Override
 	public boolean avisynth() {
 		return true;
 	}
