@@ -147,6 +147,11 @@ public class FFMpegWebVideo extends Player {
 	}
 
 	@Override
+	public String getShortName() {
+		return "FFWV";
+	}
+
+	@Override
 	// TODO remove this when it's removed from Player
 	public String[] args() {
 		return null;
