@@ -141,6 +141,11 @@ public class MEncoderAviSynth extends MEncoderVideo {
 		return "AviSynth/MEncoder";
 	}
 
+	@Override
+	public String getShortName() {
+		return "AVS/MEnc";
+	}
+
 	/**
 	 * {@inheritDoc}
 	 */
