@@ -104,6 +104,11 @@ public class MPlayerWebVideoDump extends MPlayerAudio {
 	}
 
 	@Override
+	public String getShortName() {
+		return "MP-WV";
+	}
+
+	@Override
 	public int type() {
 		return Format.VIDEO;
 	}
