@@ -4,6 +4,11 @@ DLNAMediaDatabase.2=Cleanup database...
 DLNAMediaDatabase.3=Compacting database...
 DLNAMediaDatabase.4=Scanning Folder:
 DLNAMediaDatabase.5=Damaged cache has to be deleted but the program couldn't do it.\nStop the program and delete the folder %s manually.
+DLNAResource.0=External Subtitles
+DLNAResource.1=No Encoding
+DLNAResource.2=No Enc.
+DLNAResource.3=[%E] {Audio: %c/%A (%b)} {Sub: %t/%S (%u)}
+DLNAResource.4=%F - %d [%E] {%x} {Sub: %t/%S (%u)}
 FFMpegDVRMSRemux.0=Alternative FFmpeg Path:
 FFMpegDVRMSRemux.1=Settings for DVR-MS remuxing
 FFMpegVideo.0=Encoder settings for AviSynth/FFmpeg engine only (Prefer AviSynth/MEncoder)
